--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Boilerplate</title>
+        <link rel="stylesheet" type="text/css" href="./styles.css"/>
+        <title>Expensify</title>
     </head>
 
 <body>
