--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="./styles.css"/>
+        <link rel="stylesheet" type="text/css" href="./dist/styles.css"/>
         <title>Expensify</title>
     </head>
 
 <body>
 <div id="app"></div>
-<script src="/bundle.js"></script>
+<script src="/dist/bundle.js"></script>
 </body>
 </html>
