feat: Add favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./dist/styles.css"/>
-        <title>Expensify</title>
+        <link rel="shortcut icon" type="image/jpg" href="/favicon.png"/>
+        <title>Expenses App</title>
     </head>
 
 <body>
